--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "python_notebook_template"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 jupyter = "^1.0.0"
+osmnx = "^1.2.3"
 
 [tool.poetry.group.dev.dependencies]
 poetry-dotenv-plugin = "^0.1.0"
